--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ djangoql==0.17.1
 djangorestframework==3.14.0
 drf-yasg==1.21.7
 et-xmlfile==1.1.0
+gunicorn==20.1.0
 idna==3.4
 inflection==0.5.1
 MarkupPy==1.14
